# catch_cmake_coverage

./: .gitignore  CMakeLists.txt  README.md  setup.sh
inc/: class_under_test.h
src/: class_under_test.cc
test/: class_under_test_test.cc
